from typing import Optional
from ...dto.BubbleZone import BubbleZone
from .EngineOCR import EngineOCR
from ...profiler.ResourceMonitor import ResourceMonitor
from ...assets import model

class EngineOCRFactory:
    def __init__(
        self, 
        engine_name: str, 
        debug: bool = False, 
        use_cpu: bool = False,
        monitor: Optional[ResourceMonitor] = None
    ):
        self.debug = debug
        self.use_cpu = use_cpu
        self.monitor = monitor
        
        self.engine: EngineOCR = self._setup_engine(engine_name)

    def _setup_engine(self, name: str) -> EngineOCR:
        if self.monitor:
            self.monitor.set_label("EngineOCRFactory._setup_engine")

        match name:
            case "yolo":
                from .YOLOTextDetector import YOLOTextDetector
                return YOLOTextDetector(
                    model("yolo_text_detector_1024_95pbt_5pbv.pt"), 
                    debug=self.debug, 
                    monitor=self.monitor, 
                    use_cpu=self.use_cpu
                )
            case _:
                raise ValueError(f"Engine '{name}' is not supported.")

    def run(self, image_path: str, tmp_dir: str) -> list[BubbleZone]:
        if self.monitor:
            self.monitor.set_label("EngineOCRFactory._run")

        return self.engine.run(image_path, tmp_dir)